# plcoding

./: .clang-format  .clang-tidy  .clangd  .gitignore  CMakeLists.txt  README.md  pyproject.toml  setup.py  vcpkg.json
.github/workflows/: deploy.yml
book/: _config.yml  _toc.yml  main.md
book/01_Introduction/: 00_index.ipynb  01_what.ipynb  02_construct.ipynb  03_encode.ipynb  04_decode.ipynb
book/01_Introduction/codes/: bler_rate.py
book/02_Basics/: 00_index.ipynb  01_standard_sc.ipynb  01_standardsc.ipynb  02_polarization.ipynb  03_polar_codes.ipynb  03_polarcoding.ipynb  04_construction.ipynb  04_decoding.ipynb  05_construction.ipynb
book/03_Advanced/: 00_index.ipynb  01_compression.ipynb  01_monotone.ipynb  02_source.ipynb  03_scldecoding.ipynb
plcoding/: __init__.py  _basics.py  source.py  source_core.cpp
plcoding/channel/: __init__.py  _channels.py  _codecs.py  _modulators.py
plcoding/cpp_core/: functions.cpp  iterator.cpp  source.cpp  utils.h
plcoding/cpp_core/classics/: decoder.cpp  utils.cpp  utils.h
plcoding/cpp_core/fftw_wrap/: fftw_wrap.h
plcoding/cpp_core/monotone/: decoder.cpp  decoder.h  decoders.cpp  decoders.h  readme.txt  utils.cpp  utils.h
plcoding/research/: monotone.py
plcoding/source/: __init__.py  _codecs.py  basic.py
tests/: readme.txt  test_channel.ipynb  test_listdecoder.ipynb  test_monotone.ipynb  test_source.ipynb
