[project]
name = "plcoding"
version = "0.1.0"
description = "An advanced research toolkit for Arikan's polar codes."
authors = [
  { name = "Zichang Ren", email = "rzc1937986979@163.com" }
]
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.12"
dependencies = [
  "scikit-build-core>=0.10", "pybind11", "numpy"
]

[tool.uv]
#no-build-isolation = true

[build-system]
requires = ["scikit-build-core>=0.10", "pybind11", "numpy"]
build-backend = "scikit_build_core.build"

[tool.scikit-build]
minimum-version = "0.3"
build-dir = "build"
wheel.expand-macos-universal-tags = true

[tool.scikit-build.cmake]
minimum-version = "3.15"
#args = ["-G", "Ninja", "-DCMAKE_CXX_COMPILER=clang++"]
